# blp-preview-qt-linux

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  blp-mime.xml  blp.thumbnailer  build.sh  install.sh  uninstall.sh
src/: blphandler.cpp  blphandler.h  blpplugin.cpp  blpplugin.h
